[gd_scene load_steps=20 format=3 uid="uid://yyrv5mkoljrv"]

[ext_resource type="PackedScene" uid="uid://b4aabywfv2ugu" path="res://Boss/encounter.tscn" id="1_afwih"]
[ext_resource type="Texture2D" uid="uid://cro613xfsxwvb" path="res://icon.png" id="2_0l0f7"]
[ext_resource type="Script" path="res://Boss/Black_Hole/boss_encounter.gd" id="2_lqwj2"]
[ext_resource type="Texture2D" uid="uid://bud3cm45x8hsb" path="res://Boss/Black_Hole/light_beam.png" id="3_uchix"]
[ext_resource type="Texture2D" uid="uid://6kshm8seobhh" path="res://Boss/Black_Hole/center.png" id="3_xcvqr"]

[sub_resource type="Gradient" id="Gradient_nkmft"]
offsets = PackedFloat32Array(0, 0.48, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.0980392, 0.14902, 1, 1, 0, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_jk0jq"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_75inr"]
gradient = SubResource("Gradient_jk0jq")

[sub_resource type="Curve" id="Curve_kc4u0"]
_data = [Vector2(0, 0.177273), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_mv2wb"]
curve = SubResource("Curve_kc4u0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ip4tb"]
particle_flag_align_y = true
particle_flag_disable_z = true
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 389.47
initial_velocity_max = 610.52
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
angle_min = -720.0
angle_max = 720.0
scale_curve = SubResource("CurveTexture_mv2wb")
color_ramp = SubResource("GradientTexture2D_75inr")

[sub_resource type="Shader" id="15"]
code = "shader_type canvas_item;
uniform sampler2D curve;
uniform float mix_amount = 1.0;
uniform sampler2D SCREEN_TEXTURE : hint_screen_texture, filter_linear_mipmap;

void fragment() {
	vec4 input_color = texture(SCREEN_TEXTURE, SCREEN_UV);
	vec2 vecToCenter = vec2(0.5,0.5) - UV;
	float distToCenter = length(vecToCenter);
	float curveVal = texture(curve, vec2(distToCenter)).r;
	vec2 diff = normalize(vecToCenter) * 0.6 * curveVal;
	vec3 sampled_color = texture(SCREEN_TEXTURE,SCREEN_UV  - diff).rgb;
	
	COLOR.rgb = mix(input_color.rgb, sampled_color, mix_amount);
	COLOR.a = input_color.a;
}"

[sub_resource type="Curve" id="Curve_ftjer"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.149351, 1), 0.0, 0.0, 0, 0, Vector2(0.272727, 0.345455), 0.0, 0.0, 0, 0, Vector2(0.428571, 1), 0.0, 0.0, 0, 0, Vector2(0.5, 0), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="CurveTexture" id="CurveTexture_kwb5d"]
curve = SubResource("Curve_ftjer")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_onukq"]
shader = SubResource("15")
shader_parameter/mix_amount = 1.0
shader_parameter/curve = SubResource("CurveTexture_kwb5d")

[sub_resource type="Animation" id="Animation_6ojc6"]
resource_name = "Fade_In"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Shader:material:shader_parameter/mix_amount")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0, 1.0, 0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_5yt3j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Shader:material:shader_parameter/mix_amount")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s3142"]
_data = {
"Fade_In": SubResource("Animation_6ojc6"),
"RESET": SubResource("Animation_5yt3j")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_vrkim"]
radius = 150.0

[node name="Boss_Encounter" instance=ExtResource("1_afwih")]
script = ExtResource("2_lqwj2")
splash_text = "Black
Hole"
splash_gradient = SubResource("Gradient_nkmft")

[node name="Light_Beams" type="GPUParticles2D" parent="." index="0"]
emitting = false
amount = 100
process_material = SubResource("ParticleProcessMaterial_ip4tb")
texture = ExtResource("3_uchix")
lifetime = 5.0
visibility_rect = Rect2(-3000, -3000, 6000, 6000)

[node name="Visuals" type="Node2D" parent="." index="1"]

[node name="Shader" type="Sprite2D" parent="Visuals" index="0"]
material = SubResource("ShaderMaterial_onukq")
scale = Vector2(5, 5)
texture = ExtResource("2_0l0f7")

[node name="Center" type="Sprite2D" parent="Visuals" index="1"]
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_xcvqr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]
autoplay = "Fade_In"
libraries = {
"": SubResource("AnimationLibrary_s3142")
}

[node name="Area2D" type="Area2D" parent="." index="3"]
collision_layer = 0
collision_mask = 7
gravity_space_override = 3
gravity_point = true
gravity_point_center = Vector2(0, 0)
gravity_direction = Vector2(0, 0)
gravity = 300.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource("CircleShape2D_vrkim")
disabled = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
